Alt i hele projektet

--- a/Kollegeni/appsettings.json
+++ b/Kollegeni/appsettings.json
@@ -7,7 +7,10 @@
     },
     "AllowedHosts": "*",
 
-    "ConnectionStrings": {
-        "DefaultConnection": "Data Source=booking.db"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LENOVOESPS\\SQLEXPRESS;Database=Kollegeni;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
+   
+
 }
+     
