--- a/Kollegeni/appsettings.json
+++ b/Kollegeni/appsettings.json
@@ -8,7 +8,7 @@
     "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LENOVOESPS\\SQLEXPRESS;Database=Kollegeni;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=LENOVOESPS\\SQLEXPRESS;Database=KollegeniDatabase;Trusted_Connection=True;TrustServerCertificate=True;"
   }
    
 
