--- a/Kollegeni/Kollegeni.csproj
+++ b/Kollegeni/Kollegeni.csproj
@@ -9,6 +9,10 @@
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
 
   <ItemGroup>
+    <Compile Remove="Data\DbInitializer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="EntityFramework" Version="6.5.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
