--- a/Kollegeni/Kollegeni.csproj
+++ b/Kollegeni/Kollegeni.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Compile Remove="Data\DbInitializer.cs" />
+    <Compile Remove="Models\Tenant.cs" />
   </ItemGroup>
 
   <ItemGroup>
